Adding snowline endpoint to snowtool (#53)
* new: Add function to approximate snow line for basin

* fix: Moved snowline model to snowdb
Added snowline CLI command

* new: Define SnowLineResponse model for snowline API route

* fix: Add typing to parameters in snowline func

* fix: Add allow-partial flag for zonal_stats

* fix: Add test coverage for snowdb snowline model

* fix: Added additional test coverage for snowline model

* New: Add SNOWLINE to API tags and router to main API app

* new: snowline API endpoint

* fix: Need to make these tuples to pass into zonal_stats()

* fix: Rename endpoint to match other endpoints

* fix: Stricter defining of variable,threshold unit and error handling

* fix: Whoopsie teehee

* fix: Changed error types for some exceptions for less crashiness

* feat(snowline): Updated for Snowline models

* feat(snowline): Adding tests and necessary variables to build gradient elevation

* feat(snowline): Update write*terrain functions to generate a set based on elevation stripe

* fix(snowline): Update write_swe_cog to generate gradient SWE COG for snowline tests

* fix(snowline): Whoops int to float conversion breaks things who knew

* feat(snowline): Add CLI tests for snowline CLI commands

* fix: Remove threhold_unit parameter and rephrase threshold description

* fix: Drop upper threshold of snow_line_elevation since variable can be mm or percentage

* fix: Fixing tests to use gradient_pourpoint_geojson, and various fixes

* docs: Update CHANGELOG.md

* fix: Update OpenAPI snapshot

* docs: Update usage.md

* fix: Add docstring to snowline CLI command

* docs: document snowline and download commands

* fix: Register download command with CLI

* docs: Update usage and python-api

* docs: Update CHANGELOG.md

---------
